index.css
@charset "utf-8";

h1, h2, h3, h4, h5{
	text-align: center;
	color:white;
}

h1{
	font-size: 30pt;
}

main p{
	font-size: 25pt;
	width: 50%;
	margin: 20px auto;
	text-align: left;
	line-height: 1.25;
}

#logosMain{
	margin: 0px 500px;
	padding-top: 25px;
}

#logosMain img{
	width: 30px;
	aspect-ratio: 1/1;
	object-fit: contain;
	object-position: 0%;
	margin: 0px 15px;	
	margin-bottom: 20.2rem;
	filter: invert(46%) 
			sepia(76%) 
			saturate(750%) 
			hue-rotate(163deg) 
			brightness(98%) 
			contrast(85%);
}

#logosMain a{
	float: left;
	text-align: center;
	text-decoration: none;
	padding: 10px 0px;
}

#logosMain img:hover{
	filter: invert(95%) 
			sepia(100%) 
			saturate(0%) 
			hue-rotate(109deg) 
			brightness(105%) 
			contrast(105%);
	
}

footer{
	width: 100%;
	background: none;
	position: absolute;
	bottom: 0;
	padding: 0px;
	margin: 0px;
}

footer .bottom{
	display: block;
	width: 100%;
	color: #030d22;
	text-align: center;
	position: absolute;
	bottom: 0;
	margin-top: -80rem;
}

footer .bottom p{
	width: 100%;
	text-align: center;
}

